defmodule DataAggregator.Taxonomy.AttributeResolvingStrategy do
  use Ash.Resource,
    data_layer: AshPostgres.DataLayer,
    extensions: [AshUUID, AshGraphql.Resource, AshJsonApi.Resource]

  alias DataAggregator.Platform.Collection
  alias DataAggregator.Taxonomy.Catalog
  alias DataAggregator.Taxonomy.DwcAttribute

  attributes do
    uuid_attribute :id, prefix: "ars"

    attribute :do_not_encode, :boolean do
      default false
    end

    timestamps private?: false, writable?: false
  end

  relationships do
    belongs_to :collection, Collection do
      api DataAggregator.Platform
    end

    belongs_to :dwc_attribute, DwcAttribute
    belongs_to :catalog, Catalog
  end

  actions do
    defaults [:create, :read, :update, :destroy]
  end

  code_interface do
    define_for DataAggregator.Taxonomy
    define :create, action: :create
    define :read_all, action: :read
    define :update, action: :update
    define :destroy, action: :destroy
    define :get_by_id, action: :read, get_by: [:id]
  end

  postgres do
    table "attribute_resolving_strategies"
    repo DataAggregator.Repo
  end

  graphql do
    type :attribute_resolving_strategy

    queries do
      get :get_attribute_resolving_strategy, :read
      list :list_attribute_resolving_strategies, :read
    end

    mutations do
      create :create_attribute_resolving_strategy, :create
      update :update_attribute_resolving_strategy, :update
      destroy :destroy_attribute_resolving_strategy, :destroy
    end
  end

  json_api do
    type "attribute_resolving_strategy"

    routes do
      base("/attribute_resolving_strategies")

      get(:read)
      index :read
      post(:create)
      patch(:update)
      delete(:destroy)
    end
  end
end
