Table records {
  id uuid [pk]
  import_data jsonb
  meta_data jsonb
  prs_contact_point varchar
  prs_first_name varchar
  prs_last_name varchar
  prs_date_of_birth date
  eve_day varchar
  eve_event_date date
  eve_month varchar
  eve_year varchar
  eve_end_of_period_day varchar
  eve_end_of_period_month varchar
  eve_end_of_period_year varchar
  idf_date_identified date
  idf_identified_by varchar
  idf_type_status varchar
  ref_bibliographic_citation varchar
  ref_creator varchar
  ref_date date
  ref_rights varchar
  ref_source varchar
  ref_title varchar
  ref_relationship_established_date date
  rrp_relationship_of_resource varchar
  rrp_relationship_of_resource_id varchar
  tax_family varchar
  tax_scientific_name_authorship varchar
  tax_order varchar
  tax_genus varchar
  tax_infraspecific_epithet varchar
  tax_scientific_name varchar
  spp_life_stage varchar
  loc_continent varchar
  loc_country varchar
  loc_locality varchar
  loc_state_province varchar
  loc_verbatim_locality varchar
  loc_decimal_longitude float
  loc_decimal_latitude float
  loc_georeference_remarks varchar
  occ_recorded_by varchar
  occ_sex varchar
  occ_associated_occurrences varchar
  occ_occurrence_remarks varchar
  mte_material_entity_id varchar
  mts_material_sample_type varchar
  inserted_at timestamp
  updated_at timestamp
  collection_id uuid
}

Table record_images {
  id uuid [pk]
  size integer
  inserted_at timestamp
  updated_at timestamp
  attachment_id uuid
  record_id uuid
}

Table file_attachments {
  id uuid [pk]
  filename varchar
  inserted_at timestamp
  updated_at timestamp
}

Table collections {
  id uuid [pk]
  name varchar
  code varchar
  description varchar
  mapping jsonb
  inserted_at timestamp
  updated_at timestamp
  institution_id uuid
}

Table import_files {
  id uuid [pk]
  amount_of_rows integer
  columns array
  inserted_at timestamp
  updated_at timestamp
  collection_id uuid
  attachment_id uuid
}

Table institutions {
  id uuid [pk]
  name varchar
  code varchar
  address varchar
  zip_code varchar
  city varchar
  country varchar
  mail varchar
  tel varchar
  contact_person varchar
  inserted_at timestamp
  updated_at timestamp
}

Table attribute_resolving_strategies {
  id uuid [pk]
  do_not_encode boolean
  inserted_at timestamp
  updated_at timestamp
  collection_id uuid
  dwc_attribute_id uuid
  catalog_id uuid
}

Table catalogs {
  id uuid [pk]
  name varchar
  description varchar
  url varchar
  version integer
  inserted_at timestamp
  updated_at timestamp
}

Table dwc_attributes {
  id uuid [pk]
  name varchar
  inserted_at timestamp
  updated_at timestamp
  default_catalog_id uuid
}

Table schema_migrations {
  version integer
  inserted_at timestamp
}

Table columns {
  autogenerated_id uuid [pk]
  value bytea
  name varchar [pk]
  type varchar
  mapped_to varchar
}

Ref: catalogs.id < attribute_resolving_strategies.catalog_id
Ref: catalogs.id < dwc_attributes.default_catalog_id
Ref: collections.id < attribute_resolving_strategies.collection_id
Ref: collections.id < import_files.collection_id
Ref: collections.id < records.collection_id
Ref: dwc_attributes.id < attribute_resolving_strategies.dwc_attribute_id
Ref: file_attachments.id < import_files.attachment_id
Ref: file_attachments.id < record_images.attachment_id
Ref: institutions.id < collections.institution_id
Ref: records.id < record_images.record_id
